# Auto-Dataclass

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
auto_dataclass/: __init__.py  dj_model_to_dataclass.py  exceptions.py
converters/: __init__.py  dj_model_to_dataclass.py
tests/: tests_errors.py  tests_to_dto_func.py  tests_to_dto_func_with_recursive.py
